# Eloquence

./: Makefile  README.md  run
Eloquence/: CMakeLists.txt
Eloquence/include/: parse-hosts.hpp  parse-runstats.hpp  parse-xml.hpp  utils.hpp
Eloquence/src/: main.cpp  parse-hosts.cpp  parse-runstats.cpp  parse-xml.cpp  utils.cpp
tests/: test_basic.py
tests/xml/: test_broken_xml.xml  test_html_input.xml  test_non_nmap.xml  test_ping_scan.xml
